--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <img src="картинки/coments.png" alt="" />
           </div>
           <div class="block4__right_side">
-            <div class="block4__rs_cards" id="bl4__rs_crd1">
+            <div class="block4__rs_cards">
               <h3>Survey your team</h3>
               <p>
                 Powerful questions that get to the heart of how team members
